bk_ida/gccida/c1/final_giv_value
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/final_giv_value/src/unroll.c:3741:49: error: unknown type name 'induction_1'
rtx  final_giv_value( const  struct loop *loop, induction_1 *v) 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/final_giv_value/src/unroll.c:3800:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v7 + 2), 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/final_giv_value/src/obj/unroll.o] Error 1
